--- a/01_typing/index.html
+++ b/01_typing/index.html
@@ -3,11 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>typing</title>
-  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>Hi!</div>
-    <script>
-    </script>
+    <div class="keys">
+        <div data-key="48" class="key">
+            <span>0<br>キック！</span>
+        </div>
+        <div data-key="49" class="key">
+            <span>1<br>スライム</span>
+        </div>
+        <div data-key="50" class="key">
+            <span>2<br>ぽちゃん</span>
+        </div>
+    </div>
+
+    <audio data-key="48" src="sounds/punch.mp3"></audio> 
+    <audio data-key="49" src="sounds/slime.mp3"></audio> 
+    <audio data-key="50" src="sounds/water-drop.mp3"></audio> 
+<script>
+    function removeTransition(e){
+        if(e.propertyName !== "transform") return;
+        this.classList.remove("playing");
+    }
+
+    function playSound(e){
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+        if(!audio) return;
+        audio.currentTime = 0;
+        audio.play();
+        key.classList.add("playing");
+    }
+
+    const keys = document.querySelectorAll(".key");
+    keys.forEach(key => key.addEventListener("transitionend", removeTransition));
+    window.addEventListener("keydown", playSound);
+</script>
 </body>
 </html>
