--- a/01_typing/index.html
+++ b/01_typing/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>キーボードで下記の数字を押してね！</div>
     <div class="keys">
         <div data-key="48" class="key">
             <span>0<br>キック！</span>
