--- a/05_Panels/index.html
+++ b/05_Panels/index.html
@@ -4,13 +4,82 @@
   <meta charset="UTF-8">
   <title>panel</title>
   <style>
+    body {
+        font-family: Hannotate TC,osaka,"MS PGothic",arial,helvetica,sans-serif;
+    }
+    .panels {
+        min-height: 100vh;
+        display: flex;
+    }
+    .panel {
+        box-shadow: inset 0 0 0 5px rgba(255,255,255,0.1);
+        text-align: center;
+        font-size: 20px;
+        color: white;
+        transition: 
+                font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+                flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+                background 0.2s;
+        background-size: cover;
+        background-position: center;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    .panel p {
+        font-size: 2em;
+        text-shadow: 0 2px 4px rgba(0,0,0,0.72);
+        margin: 0;
+        transition: transform 0.5s;
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        align-items: center;
+    }
+    .panel1 { background-image: url(img/01.jpg);}
+    .panel2 { background-image: url(img/02.jpg);}
+    .panel3 { background-image: url(img/03.jpg);}
 
+    .panel > *:first-child {transform: translateY(-100%);}
+    .panel.open-active > *:first-child {transform: translateY(0%);}
+    .panel > *:last-child {transform: translateY(100%);}
+    .panel.open-active > *:last-child {transform: translateY(0%);}
+    .panel.open {
+      flex: 5;
+      font-size: 40px;
+    }
   </style>
 </head>
 <body>
-    
+    <div class="panels">
+        <div class="panel panel1">
+            <p>*</p>
+            <p>I</p>
+            <p>(* '-')</p>
+        </div>
+        <div class="panel panel2">
+            <p>*</p>
+            <p>LOVE</p>
+            <p>( ' - ' )</p>
+        </div>
+        <div class="panel panel3">
+            <p>*</p>
+            <p>COFFEE</p>
+            <p>('-' *)</p>
+        </div>
+    </div>
 <script>
-
+    function openFunc(){
+        this.classList.toggle("open");
+    }
+    function activeFunc(e){
+        if(e.propertyName.includes('flex')) this.classList.toggle('open-active');
+        // this.classList.toggle("open-active");
+        console.log(e);
+    }
+    const panels = document.querySelectorAll(".panel");
+    panels.forEach(panel => panel.addEventListener("click", openFunc));
+    panels.forEach(panel => panel.addEventListener("transitionend", activeFunc));
 </script>
 </body>
 </html>
