--- a/text_flow/index.html
+++ b/text_flow/index.html
@@ -48,7 +48,7 @@
       .text {
         position: absolute;
         top: 100%;
-        animation: scroll 250s linear 4s;
+        animation: scroll 240s linear 4s;
       }
 
       .right {
@@ -60,8 +60,7 @@
       }
 
       .wait {
-        height: 150px;
-        /* background-color: white; */
+        height: 130px;
       }
 
       @keyframes scroll {
@@ -76,11 +75,12 @@
 
       h1 {
         position: absolute;
-        width: 2.6em;
-        left: 45%;
-        top: 10%;
-        font-size: 10em;
+        width: 100%;
+        left: 35%;
+        top: -10%;
+        font-size: 20em;
         text-align: center;
+        margin-top: 10%;
         margin-left: -1.3em;
         line-height: 0.7em;
         letter-spacing: -0.05em;
@@ -88,11 +88,11 @@
         text-shadow: -4px -4px 0 #ff0, 4px -4px 0 #ff0, -4px 4px 0 #ff0, 4px 4px 0 #ff0;
         opacity: 0;
         z-index: 1;
-        -webkit-animation: logo 8s ease-out 2.5s;
-        -moz-animation: logo 8s ease-out 2.5s;
-        -ms-animation: logo 8s ease-out 2.5s;
-        -o-animation: logo 8s ease-out 2.5s;
-        animation: logo 8s ease-out 2.5s;
+        -webkit-animation: logo 10s ease-out 2.5s;
+        -moz-animation: logo 10s ease-out 2.5s;
+        -ms-animation: logo 10s ease-out 2.5s;
+        -o-animation: logo 10s ease-out 2.5s;
+        animation: logo 10s ease-out 2.5s;
       }
 
       @-webkit-keyframes logo {
@@ -182,7 +182,8 @@
     <div class="wrap">
       <div class="text">
         <p class="wait"></p>
-        <p>Welcome to Code Chrysalis!!</p>
+        <p class="center">Episode CCJ1</p>
+        <p class="center">Welcome to Code Chrysalis!!</p>
         <p>みなさんは 入学試験、プリコースを無事終え、今日からいよいよImmersiveクラスが始まります。</p>
         <p>今日から12週間、様々なことがみんなさんを待ち受けています。</p>
         <p>
